lang.java.statics.test/tests/positive/locals/classdeclsinblockinorder.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public void m() {
        class B {}
        class C extends B {}
    }
}

