lang.java.statics.test/tests/negative/classes/local/classdeclsinblockinorder.no.javtest
STATIX fail
JAVAC  fail

[A]
public class A {
    public void m() {
        class C extends B {}
        class B {}
    }
}

